--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -25,7 +26,8 @@
     "zone.js": "~0.11.4",
     "@angular/cli": "~13.0.3",
     "@angular/compiler-cli": "~13.0.0",
-    "typescript": "~4.4.3"
+    "typescript": "~4.4.3",
+    "express": "~4.17.1";
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.0.3",
@@ -40,5 +42,9 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.4.3"
+  },
+   "engines": {
+    "node": "12.18.2",
+    "npm": "6.14.5"
   }
 }
