--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@angular/cli": "~13.0.3",
     "@angular/compiler-cli": "~13.0.0",
     "typescript": "~4.4.3",
-    "express": "~4.17.1";
+    "express": "~4.17.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.0.3",
